--- a/index.html
+++ b/index.html
@@ -27,69 +27,168 @@
 
 
 		<div class="navbuttons" style=" justify-content: center; align-items: center;">
-			<div onclick="scrollToTarget('immersive-worlds')" class="navbutton">Immersive Worlds</div>
-			<div onclick="scrollToTarget('sherlock')" class="navbutton">Sherlock & Watson</div>
-			<div onclick="scrollToTarget('story-books')" class="navbutton">Story Books</div>
-			<div onclick="scrollToTarget('cony')" class="navbutton">Characters of Cony Forest</div>
+			<div onclick="scrollToTarget('picture-books')" class="navbutton">Picture Books</div>
+			<div onclick="scrollToTarget('chapter-books')" class="navbutton">Chapter Books</div>
+			<!--<div onclick="scrollToTarget('story-books')" class="navbutton">Story Books</div>-->
+			<!--<div onclick="scrollToTarget('cony')" class="navbutton">Characters of Cony Forest</div>-->
 			<div onclick="scrollToTarget('me')" class="navbutton">About Me</div>
 		</div>
 
 
 		<div class="yoo" style="margin:0 auto; ">
 			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-			<div>
-				<div id="immersive-worlds" class="line-text fun-font"
-					style="position: sticky; top: 0; background-color: #f2f2f2;">
-					<hr>
-					<span>Immersive, Magical & Detailed</span>
-					<hr>
-				</div>
-				<div class="image-container" style="display:flex; justify-content:center">
-					<div>
-						<img class="left-tiled" src="./assets/magical_storybook_1.jpeg" class="left-tiled">
-					</div>
-					<div>
-						<img src="./assets/magical_storybook_2.jpeg" class="right-tiled">
-					</div>
-				</div>
-				<div class="image-container" style="display:flex; justify-content:center;">
-					<div>
-						<img src="./assets/kiddo.jpeg" class="tile">
-					</div>
-				</div>
-				<div class="image-container" style="display:flex; justify-content:center;">
-					<div>
-						<img src="./assets/treasure_cat.jpeg" class="tile">
-					</div>
-				</div>
-				<div class="image-container" style="display:flex; justify-content:center;">
-					<div>
-						<img src="./assets/pet_dragon.jpeg" class="tile">
-					</div>
-				</div>
-				<div class="image-container" style="display:flex; justify-content:center">
-					<div>
-						<img class="left-tiled" src="./assets/octopus_queen.png" class="left-tiled">
-					</div>
-					<div>
-						<img src="./assets/mermaid_dragon.png" class="right-tiled">
-					</div>
+
+			<div id="picture-books" class="line-text fun-font"
+				style="position: sticky; top: 0; background-color: #f2f2f2;">
+				<hr>
+				<span>Picture Books</span>
+				<hr>
+			</div>
+			<div class="sub-heading">
+				<span>Treasure Hunt</span>
+			</div>
+			<div class="sub-heading-write-up">
+				<span>A cat searching for treasure with its trusty spider side-kick.</span>
+			</div>
+			<div class="image-container" style="display:flex; justify-content:center;">
+				<div>
+					<img src="./assets/treasure_cat.jpeg" class="tile">
 				</div>
 			</div>
-			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 
-			<div id="sherlock" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
-				<hr>
-				<span>Sherlock & Watson</span>
-				<hr>
+			<div class="sub-heading">
+				<span>The Lord is my Shepherd</span>
+			</div>
+			<div class="sub-heading-write-up">
+				<span>This custom book was based on Psalm 23 for a client who wanted to imagine her daughter in the
+					story.</span>
 			</div>
 			<div class="image-container" style="display:flex; justify-content:center">
 				<div>
-					<img class="left-tiled" src="./assets/sherlock_scarlet.png">
+					<img src="./assets/portfolioupdate/psalm23_cover.JPG" class="tile">
 				</div>
 				<div>
-					<img src="./assets/sherlock_hound.png" class="right-tiled">
+					<img src="./assets/portfolioupdate/psalm23_1.png" class="tile">
+				</div>
+			</div>
+
+
+			<div class="image-container" style="display:flex; justify-content:center">
+				<div>
+					<img src="./assets/portfolioupdate/psalm23_2.png" class="tile">
+				</div>
+				<div>
+					<img src="./assets/portfolioupdate/psalm23_3.png" class="tile">
+				</div>
+			</div>
+
+
+			<div class="sub-heading">
+				<span>Imagining Dragons</span>
+			</div>
+			<div class="sub-heading-write-up">
+				<span>This is a picture book that I am creating about a little girl named Nadia, as she and her dragon
+					enjoy their
+					last summer before preschool. As the school year approaches, she begins to get nervous -
+					she doesn’t want to leave her dragon behind! Nadia and Dragon begin creating schemes to try to get
+					her out of going to school in the fall. </span>
+			</div>
+			<div class="image-container" style="display:flex; justify-content:center;">
+				<div>
+					<img src="./assets/pet_dragon.jpeg" class="tile">
+				</div>
+			</div>
+			<div class="image-container" style="display:flex; justify-content:center;"></div>
+			<div>
+				<img src="./assets/portfolioupdate/pet_dragon_1.jpeg" class="tile">
+			</div>
+
+			<div class="image-container" style="display:flex; justify-content:center;">
+				<div>
+					<img src="./assets/portfolioupdate/pet_dragon_2.jpeg" class="tile">
+				</div>
+			</div>
+			<div class="image-container" style="display:flex; justify-content:center;">
+				<div>
+					<img src="./assets/portfolioupdate/pet_dragon_3.jpeg" class="tile">
+				</div>
+			</div>
+
+			<div class="sub-heading">
+				<span>Little Star - Big Dreams</span>
+			</div>
+			<!--<div class="sub-heading-write-up">
+				<span>Description</span>
+			</div>-->
+			<div class="image-container" style="display:flex; justify-content:center;">
+				<div>
+					<img src="./assets/portfolioupdate/kiddo.JPG" class="tile">
+				</div>
+			</div>
+
+			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+			<div id="chapter-books" class="line-text fun-font"
+				style="position: sticky; top: 0; background-color: #f2f2f2;">
+				<hr>
+				<span>Chapter Books</span>
+				<hr>
+			</div>
+			<div class="sub-heading">
+				<span>The Adventures of Cony Forest</span>
+			</div>
+			<!--<div class="sub-heading-write-up">
+				<span>Description</span>
+			</div>-->
+			<div class="image-container" style="display:flex; justify-content:center">
+				<div>
+					<img src="./assets/portfolioupdate/cony_cover.png" class="tile">
+				</div>
+				<div>
+					<img src="./assets/portfolioupdate/cony_pg5.png" class="tile">
+				</div>
+			</div>
+
+
+			<div class="image-container" style="display:flex; justify-content:center">
+				<div>
+					<img src="./assets/portfolioupdate/cony_pg7.png" class="tile">
+				</div>
+				<div>
+					<img src="./assets/portfolioupdate/cony_pg9.png" class="tile">
+				</div>
+			</div>
+			<div class="sub-heading">
+				<span>The Enchanted Grove</span>
+			</div>
+			<!--<div class="sub-heading-write-up">
+				<span>Description</span>
+			</div>-->
+
+			<div class="image-container" style="display:flex; justify-content:center">
+				<div>
+					<img class="left-tiled" src="./assets/magical_storybook_1.jpeg" class="left-tiled">
+				</div>
+				<div>
+					<img src="./assets/portfolioupdate/magical_storybook_2.jpeg" class="right-tiled">
+				</div>
+			</div>
+
+
+			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+			<div class="sub-heading">
+				<span>Sherlock and Watson</span>
+			</div>
+			<!--<div class="sub-heading-write-up">
+				<span>Description</span>
+			</div>-->
+
+			<div class="image-container" style="display:flex; justify-content:center">
+				<div>
+					<img class="left-tiled" src="./assets/sherlock_scarlet.JPG">
+				</div>
+				<div>
+					<img src="./assets/sherlock_hound.JPG" class="right-tiled">
 				</div>
 			</div>
 			<div class="image-container" style="display:flex; justify-content:center;">
@@ -99,86 +198,9 @@
 			</div>
 			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 
-			<div id="story-books" class="line-text fun-font"
-				style="position: sticky; top: 0; background-color: #f2f2f2;">
-				<hr>
-				<span>Story Book Illustrations</span>
-				<hr>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center">
-				<div>
-					<img class="left-tiled" src="./assets/rainy_1.jpeg" class="left-tiled">
-				</div>
-				<div>
-					<img src="./assets/rainy_2.jpeg" class="right-tiled">
-				</div>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center;">
-				<div>
-					<img src="./assets/rainy_3.jpeg" class="tile">
-				</div>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center;">
-				<div>
-					<img src="./assets/jesus_1.png" class="tile">
-				</div>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center;">
-				<div>
-					<img src="./assets/jesus_2.png" class="tile">
-				</div>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center;">
-				<div>
-					<img src="./assets/jesus_3.png" class="tile">
-				</div>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center;">
-				<div>
-					<img src="./assets/jesus_4.png" class="tile">
-				</div>
-			</div>
 
 
-			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-			<div id="cony" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
-				<hr>
-				<span>The Characters of Cony Forest</span>
-				<hr>
-			</div>
 
-			<div class="image-container" style="display:flex; justify-content:center;">
-				<div>
-					<img src="./assets/bulbina.jpeg" class="tile">
-				</div>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center">
-				<div>
-					<img class="left-tiled" src="./assets/Rocky Model Sheet.png">
-				</div>
-				<div>
-					<img src="./assets/Picu Model Sheet.png" class="right-tiled">
-				</div>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center;">
-				<div>
-					<img src="./assets/twotty.jpeg" class="tile">
-				</div>
-			</div>
-
-			<div class="image-container" style="display:flex; justify-content:center">
-				<div>
-					<img class="left-tiled" src="./assets/green.png">
-				</div>
-				<div>
-					<img src="./assets/grubby.png" class="right-tiled">
-				</div>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center;">
-				<div>
-					<img src="./assets/Frogs.png" class="tile">
-				</div>
-			</div>
 
 			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 			<div id="me" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
@@ -221,10 +243,12 @@
 				</div>
 			</div>
 		</div>
-		<footer>
+	</div>
+	</div>
+	<footer>
 
-			<p>&copy; 2024 My Portfolio. All rights reserved.</p>
-		</footer>
+		<p>&copy; 2024 My Portfolio. All rights reserved.</p>
+	</footer>
 
 
 </body>
