--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!--
+Cony (8-12)
+Sherlock (8-12)
+Enchanted Grove (8-12)
+Kids Klub (6-11)
+…
+The lord is my shepherd (3-7)
+…
+dragon story (3-6)
+-->
 <!DOCTYPE html>
 <html lang="en" style="background-color: #f2f2f2;">
 
@@ -27,8 +37,8 @@
 
 
 		<div class="navbuttons" style=" justify-content: center; align-items: center;">
-			<div onclick="scrollToTarget('picture-books')" class="navbutton">Picture Books</div>
 			<div onclick="scrollToTarget('chapter-books')" class="navbutton">Chapter Books</div>
+			<div onclick="scrollToTarget('picture-books')" class="navbutton">Picture Books</div>
 			<!--<div onclick="scrollToTarget('story-books')" class="navbutton">Story Books</div>-->
 			<!--<div onclick="scrollToTarget('cony')" class="navbutton">Characters of Cony Forest</div>-->
 			<div onclick="scrollToTarget('me')" class="navbutton">About Me</div>
@@ -36,6 +46,105 @@
 
 
 		<div class="yoo" style="margin:0 auto; ">
+			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+
+			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+			<div id="chapter-books" class="line-text fun-font"
+				style="position: sticky; top: 0; background-color: #f2f2f2;">
+				<hr>
+				<span>Chapter Books</span>
+				<hr>
+			</div>
+			<div class="sub-heading">
+				<span>The Adventures of Cony Forest</span>
+			</div>
+			<div class="sub-heading-write-up">
+				<div>
+					Published Dec 3rd, 2024 </div>
+				<div>This is ia chapter book I illustrated about a trio of birds that go on a
+					quest to find an ancient secret and save Cony Forest!
+
+				</div>
+				<div> <a target="_blank" href="https://a.co/d/2N38qWH"> Buy on Amazon! </a></div>
+			</div>
+			<div class="image-container" style="display:flex; justify-content:center">
+				<div>
+					<img src="./assets/cony_cover_mockup.png" class="tile">
+				</div>
+				<div>
+					<img src="./assets/portfolioupdate/cony_pg5.png" class="tile">
+				</div>
+			</div>
+
+
+			<div class="image-container" style="display:flex; justify-content:center">
+				<div>
+					<img src="./assets/portfolioupdate/cony_pg7.png" class="tile">
+				</div>
+				<div>
+					<img src="./assets/portfolioupdate/cony_pg9.png" class="tile">
+				</div>
+			</div>
+
+			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+			<div class="sub-heading">
+				<span>Life Story Illustration</span>
+			</div>
+			<div class="sub-heading-write-up">
+				<span>This client wanted custom illustrations for a short story for children aged 6-11
+				</span>
+			</div>
+
+			<div class="image-container" style="display:flex; justify-content:center">
+				<div>
+					<img class="left-tiled" src="./assets/kidz_klub_1.png" class="left-tiled">
+				</div>
+				<div>
+					<img src="./assets/kidz_klub_2.png" class="right-tiled">
+				</div>
+			</div>
+			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+			<div class="sub-heading">
+				<span>Sherlock and Watson</span>
+			</div>
+			<div class="sub-heading-write-up">
+				<span>In this project, I have reimagined the Adventures of Sherlock Holmes to appeal to a younger
+					audience. </span>
+			</div>
+
+			<div class="image-container" style="display:flex; justify-content:center">
+				<div>
+					<img class="left-tiled" src="./assets/sherlock_scarlet.JPG">
+				</div>
+				<div>
+					<img src="./assets/sherlock_hound.JPG" class="right-tiled">
+				</div>
+			</div>
+			<div class="image-container" style="display:flex; justify-content:center;">
+				<div>
+					<img src="./assets/sherlock_bw.png" class="tile">
+				</div>
+			</div>
+			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+			<div class="sub-heading">
+				<span>The Enchanted Grove </span>
+			</div>
+			<div class="sub-heading-write-up">
+				<span>When Lila, Amara and Elliot stumble across an enchanted book, everything changes. They’re drawn
+					beyond its pages and into the Enchanted Grove on a quest to uncover the mysteries of the
+					Nightblossoms’ song.</span>
+			</div>
+
+			<div class="image-container" style="display:flex; justify-content:center">
+				<div>
+					<img class="left-tiled" src="./assets/magical_storybook_1.jpeg" class="left-tiled">
+				</div>
+				<div>
+					<img src="./assets/portfolioupdate/magical_storybook_2.jpeg" class="right-tiled">
+				</div>
+			</div>
+
+
 			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 
 			<div id="picture-books" class="line-text fun-font"
@@ -65,26 +174,17 @@
 			</div>
 			<div class="image-container" style="display:flex; justify-content:center">
 				<div>
-					<img src="./assets/portfolioupdate/psalm23_cover.JPG" class="tile">
-				</div>
-				<div>
 					<img src="./assets/portfolioupdate/psalm23_1.png" class="tile">
 				</div>
-			</div>
-
-
-			<div class="image-container" style="display:flex; justify-content:center">
 				<div>
 					<img src="./assets/portfolioupdate/psalm23_2.png" class="tile">
 				</div>
-				<div>
-					<img src="./assets/portfolioupdate/psalm23_3.png" class="tile">
-				</div>
 			</div>
 
 
+
 			<div class="sub-heading">
-				<span>Imagining Dragons</span>
+				<span>Not Without my Dragon</span>
 			</div>
 			<div class="sub-heading-write-up">
 				<span>This is a picture book that I am creating about a little girl named Nadia, as she and her dragon
@@ -114,89 +214,20 @@
 				</div>
 			</div>
 
+			<!--
+		
 			<div class="sub-heading">
 				<span>Little Star - Big Dreams</span>
 			</div>
-			<!--<div class="sub-heading-write-up">
+			<div class="sub-heading-write-up">
 				<span>Description</span>
-			</div>-->
+			</div>
 			<div class="image-container" style="display:flex; justify-content:center;">
 				<div>
 					<img src="./assets/portfolioupdate/kiddo.JPG" class="tile">
 				</div>
 			</div>
-
-			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-			<div id="chapter-books" class="line-text fun-font"
-				style="position: sticky; top: 0; background-color: #f2f2f2;">
-				<hr>
-				<span>Chapter Books</span>
-				<hr>
-			</div>
-			<div class="sub-heading">
-				<span>The Adventures of Cony Forest</span>
-			</div>
-			<!--<div class="sub-heading-write-up">
-				<span>Description</span>
-			</div>-->
-			<div class="image-container" style="display:flex; justify-content:center">
-				<div>
-					<img src="./assets/portfolioupdate/cony_cover.png" class="tile">
-				</div>
-				<div>
-					<img src="./assets/portfolioupdate/cony_pg5.png" class="tile">
-				</div>
-			</div>
-
-
-			<div class="image-container" style="display:flex; justify-content:center">
-				<div>
-					<img src="./assets/portfolioupdate/cony_pg7.png" class="tile">
-				</div>
-				<div>
-					<img src="./assets/portfolioupdate/cony_pg9.png" class="tile">
-				</div>
-			</div>
-			<div class="sub-heading">
-				<span>The Enchanted Grove</span>
-			</div>
-			<!--<div class="sub-heading-write-up">
-				<span>Description</span>
-			</div>-->
-
-			<div class="image-container" style="display:flex; justify-content:center">
-				<div>
-					<img class="left-tiled" src="./assets/magical_storybook_1.jpeg" class="left-tiled">
-				</div>
-				<div>
-					<img src="./assets/portfolioupdate/magical_storybook_2.jpeg" class="right-tiled">
-				</div>
-			</div>
-
-
-			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-			<div class="sub-heading">
-				<span>Sherlock and Watson</span>
-			</div>
-			<!--<div class="sub-heading-write-up">
-				<span>Description</span>
-			</div>-->
-
-			<div class="image-container" style="display:flex; justify-content:center">
-				<div>
-					<img class="left-tiled" src="./assets/sherlock_scarlet.JPG">
-				</div>
-				<div>
-					<img src="./assets/sherlock_hound.JPG" class="right-tiled">
-				</div>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center;">
-				<div>
-					<img src="./assets/sherlock_bw.png" class="tile">
-				</div>
-			</div>
-			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+	-->
 
 
 
