--- a/index.html
+++ b/index.html
@@ -35,26 +35,29 @@ dragon story (3-6)
 		<h2 class="name-heading" style="color: #5d4143;  padding-bottom: 0%; margin-bottom: 0%;">Katrina
 			Abraham</h2>
 
+		<div style = "display:flex; align-items:flex-end; justify-content:bottom; padding-bottom: 5%">
+			<div>
+				<img style = "max-width:300px; border-radius: 15px" src="./assets/portfolioupdatepart1/limbo.title.png" class="rounded-image">
+			</div>
+			<div>
+				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart1/Limbo. bear confrontation.png" class="rounded-image">
+				<img style = "max-width:300px; border-radius:15px;" src="./assets/portfolioupdatepart1/limbo.monster view.png" class="rounded-image">
+				<img style = "max-width:300px; border-radius:15px;" src="./assets/portfolioupdatepart1/limbo. over shoulder.png" class="rounded-image">
+			</div>
+		</div>
+		<div>
+		<img style = "width:300px" src="./assets/portfolioupdatepart1/Untitled_Artwork.png" class="rounded-image">
+		</div>
+		<div>
+		<img style = "width:300px" src="./assets/portfolioupdatepart2/IMG_2103.png" class="rounded-image">
+		<img style = "width:300px" src="./assets/portfolioupdatepart2/IMG_2104.png" class="rounded-image">
+		<img style = "width:300px" src="./assets/portfolioupdatepart2/IMG_2105.png" class="rounded-image">
+		<img style = "width:300px" src="./assets/portfolioupdatepart2/IMG_2106.png" class="rounded-image">
+		<img style = "width:300px" src="./assets/portfolioupdatepart2/IMG_2107.png" class="rounded-image">
 
-		<div class="navbuttons" style=" justify-content: center; align-items: center;">
-			<div onclick="scrollToTarget('chapter-books')" class="navbutton">Chapter Books</div>
-			<div onclick="scrollToTarget('picture-books')" class="navbutton">Picture Books</div>
-			<!--<div onclick="scrollToTarget('story-books')" class="navbutton">Story Books</div>-->
-			<!--<div onclick="scrollToTarget('cony')" class="navbutton">Characters of Cony Forest</div>-->
-			<div onclick="scrollToTarget('me')" class="navbutton">About Me</div>
 		</div>
 
-
 		<div class="yoo" style="margin:0 auto; ">
-			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-
-			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-			<div id="chapter-books" class="line-text fun-font"
-				style="position: sticky; top: 0; background-color: #f2f2f2;">
-				<hr>
-				<span>Chapter Books</span>
-				<hr>
-			</div>
 			<div class="sub-heading">
 				<span>The Adventures of Cony Forest</span>
 			</div>
